# python

./: .gitignore
api/: pyproject.toml
api/linux/: window_control.py  window_state.py
audio_to_text/: MicSpeech.py  _pyproject.toml  audio_assistent.py  commands.json  fix_text.py  my_train.py  my_train_hf.py  out_audio_1.txt  playaudio.py  pyproject.toml  test.ipynb  test_audio.py  test_llm_model.py  test_microphone.py  test_microphone2.py  test_microphone3.py  test_vosk.ipynb  text_to_speech.py  validate_model_stt.py  validate_my_model_stt.py  vosk_recognizer.py  whisper_meeting_skriber.py  whisper_recognizer.py
common/: base_64.py  my_timer.py
files/: convert_video.py  convert_video_2.py  delete_by_folder.py  extract_metadata_from_jpeg.py  extract_metadata_from_jpeg_test.py  find_and_insert_files.py  find_ex.py  formating_date.py  get_df_mov_meta.py  lsyncd_monitor.py  lsyncd_monitor.sh  pyproject.toml  run_sort_by_ex.sh  sort_by_ex.py  stat_video.py  test_loguru.py
files/check/: chek_file.py
files/dublicate/: 01. find_file.py  02. find_dublicate.py  03. delete_dublicate.py  delete_dublicate.py  dublicate_folder.py  find_dublicate.py  find_file.py
files/moving_file/: group_by.py  move_file.py  sort_by_ex.py  sync_disk.py
files/pandas_performance/: generate_dataset.py  read_dask.py  read_pandas.py
files/svg/: combine_paths.py  test.py
files/test/: sort_by_ex_test.py
files/test_read_big_file/: full.py  test.py
gemes/xo/: pyproject.toml
leetcode/: 1143_longest-common-subsequence.py  16_3sum-closest.py  18_4sum.py  33_find-first-and-last-position-of-element-in-sorted-array.py  3_longest-substring-without-repeating-characters.py  416_partition-equal-subset-sum.py  41_first-missing-positive.py  43_multiply-strings.py  44_wildcard-matching.py  45_jump-game-ii.py  739_daily-temperatures.py
leetcode/codes/: 17_letter-combinations-of-a-phone-number.py  38_count-and-say.py  5_longest-palindromic-substring.py  70_climbing-stairs.py  common.py  problem_01_two-sum.py  problem_02_add-two-numbers.py  problem_02_add-two-numbers_2.py  problem_03_longest-substring-without-repeating-characters.py  problem_04_median-of-two-sorted-arrays.py  problem_05_longest-palindromic-substring.py  problem_05_zigzag-conversion.py  problem_06_reverse-integer.py  problem_07_palindrome_number.py  problem_08.py  problem_10.py  problem_102_binary_tree_level_order_traversal.py  problem_104_maximum_depth_of_binary_tree.py  problem_11.py  problem_1143_longest_common_subsequence.py  problem_118_pascals_triangle.py  problem_12.py  problem_121_best_time_to_buy_and_sell_stock.py  problem_123_best-time-to-buy-and-sell-stock-iii.py  problem_125_valid_palindrome.py  problem_13.py  problem_136_single_number.py  problem_14.py  problem_141_linked_list_cycle.py  problem_15.py  problem_153_find_minimum_in_rotated_sorted_array.py  problem_160_intersection_of_two_linked_lists.py  problem_167_two_sum_ii_input_array_is_sorted.py  problem_169_majority_element.py  problem_16_3sum_closest_2.py  problem_1763_longest_nice_substring.py  problem_1876_substrings_of_size_three_with_distinct_characters.py  problem_19_remove-nth-node-from-end-of-list.py  problem_19_remove_nth_node_from_end_of_list.py  problem_202_happy_number.py  (+52 more)
leetcode/tests/: problem_07_test.py  problem_08_test.py  problem_09_test.py  problem_10_test.py  problem_11_test.py  problem_12_test.py  problem_13_test.py  problem_14_test.py  problem_15_test.py  problem_16_test.py  problem_17_test.py  problem_18_test.py  problem_19_test.py  problem_20_test.py  problem_21_test.py  problem_22_test.py  problem_23_merge_k_sorted_lists_test.py  problem_23_test.py  problem_34_find_first_and_last_position_of_element_in_sorted_array_test.py  problem_74_search_a_2d_matrix_test.py
ml/face_embedding/: check_classters.py  (+2 more)
notebook/: rfm_analysis.ipynb
opencv/: SettingColors.py  extractContours.py  findContours.2.py  showContours.py  showContoursAll.py  test.py  test1.py
parsers/: pyproject.toml
test/: linear_models_test.ipynb  test.py
test/thread/many/: pyproject.toml
test/thread/many/tests/: test.py  test2.py
vk api/: CreateAlbom.py  ReadMarkets.py  const.py  delete.py  deleteAlbums.py  editMarkts.py  getAlbums.py  getCat.py  getCategorues.py  loadPhoto.py  readFile.py  readXml.py  writeToVkfromXml_test.1.py  writeToVkfromXml_test.py
(+94 files in other folders)
