[tool.poetry]
name = "many"
version = "0.1.0"
description = ""
authors = ["aleksei korobov <aleksei_korobov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.8.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
